fix: front page link alignment

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -358,6 +358,11 @@ nav li a {
     margin: 0;
   }
 
+  label {
+    align-items: baseline;
+    white-space: normal;
+  }
+
   a {
     padding: 4px 0;
     color: #717171;
